<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">StickmanPunchingBag</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="image_description">Main Menu Logo of Stickman Punchingbag</string>
    <string name="main_menu_button">Main Menu</string>
    <string name="time_trial_button">Time Trial</string>
    <string name="high_scores_button">High Scores</string>
    <string name="settings_button">Settings</string>
    <string name="pause_button">Pause</string>
    <string name="number_of_punches_default">Number of Punches</string>
    <string name="timer_default">Timer</string>
    <string name="punch_button">Punch</string>
    <string name="clear">Clear</string>
    <string name="punch_mode_dialog_message">Select your punch combination mode</string>
    <string name="punch_mode_free">Free Punch</string>
    <string name="punch_mode_alt">Alternate Punches</string>
    <string name="punch_mode_left">All Left Punch</string>
    <string name="punch_mode_right">All Right Punch</string>
    <string name="player_name_dialog_title">New High Score\nWhat is your name?</string>
    <string name="player_name_dialog_hint">Name</string>
    <string name="pause_dialog_title">Game Paused</string>
    <string name="pause_dialog_message">The game is currently paused.\nClose this dialog to return to the game.</string>
    <string name="animation_image_view_description">Stickman Animation</string>
    <string name="punchingbag_image_view_description">Punchingbag Animation</string>
    <string name="high_scores_name_column">Name</string>
    <string name="high_scores_punches_column">Number Of Punches</string>

    <string-array name="theme_array">
        <item>Dark</item>
        <item>Light</item>
        <item>Pink</item>
    </string-array>
    <string-array name="theme_array_values">
        <item>Dark</item>
        <item>Light</item>
        <item>Pink</item>
    </string-array>

    <string name="title_activity_high_scores">HighScoresActivity</string>
    <string name="title_activity_time_trial">TimeTrialActivity</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    
    <string name="author_info">Created By:\t\tStephen Kendrick\nContact At:\t\tskendri1@my.westga.edu</string>

</resources>