<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainMenuActivity" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:layout_weight="1"
        android:contentDescription="@string/image_description"
        android:src="@drawable/stickman_punchingbag_main_image_dark" />

    <Button
        android:id="@+id/timeTrialButton"
        android:layout_width="wrap_content"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:layout_margin="2dp"
        android:background="@drawable/stickman_punchingbag_button_dark"
        android:gravity="right|center"
        android:text="@string/time_trial_button" 
        android:onClick="onTimeTrialButtonClick"/>

    <Button
        android:id="@+id/highScoresButton"
        android:layout_width="wrap_content"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:layout_margin="2dp"
        android:background="@drawable/stickman_punchingbag_button_dark"
        android:gravity="right|center"
        android:text="@string/high_scores_button" 
        android:onClick="onHighScoresButtonClick"/>

    <Button
        android:id="@+id/settingsButton"
        android:layout_width="wrap_content"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:layout_margin="2dp"
        android:background="@drawable/stickman_punchingbag_button_dark"
        android:gravity="right|center"
        android:text="@string/settings_button" 
        android:onClick="onSettingsButtonClick"/>

</LinearLayout>