<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/highScoresMainLayout"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/highScores"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="10dp" >

        <Button
            android:id="@+id/mainMenuButton"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@drawable/stickman_punchingbag_button_dark"
            android:gravity="right|center"
            android:onClick="onMainMenuButtonClick"
            android:text="@string/main_menu_button" />

        <TextView
            android:id="@+id/highScoresTitleTextView"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingRight="10sp"
            android:text="@string/high_scores_button" >
        </TextView>

        <Button
            android:id="@+id/clearButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/clear" 
            android:onClick="onClearButtonClick"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/highScoresColumnNames"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp" >

        <TextView
            android:id="@+id/nameColTextView"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingRight="10sp"
            android:text="@string/high_scores_name_column" >
        </TextView>

        <TextView
            android:id="@+id/numberOfPunchesColTextView"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingRight="10sp"
            android:text="@string/high_scores_punches_column" >
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/highscoreslistitem1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/playerNameTextView1"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingRight="10sp" >
        </TextView>

        <TextView
            android:id="@+id/numberOfPunchesTextView1"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingRight="10sp" >
        </TextView>
        
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/highscoreslistitem2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/playerNameTextView2"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingRight="10sp" >
        </TextView>

        <TextView
            android:id="@+id/numberOfPunchesTextView2"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingRight="10sp" >
        </TextView>
        
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/highscoreslistitem3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/playerNameTextView3"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingRight="10sp" >
        </TextView>

        <TextView
            android:id="@+id/numberOfPunchesTextView3"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingRight="10sp" >
        </TextView>
        
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/highscoreslistitem4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/playerNameTextView4"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingRight="10sp" >
        </TextView>

        <TextView
            android:id="@+id/numberOfPunchesTextView4"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingRight="10sp" >
        </TextView>
        
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/highscoreslistitem5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/playerNameTextView5"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingRight="10sp" >
        </TextView>

        <TextView
            android:id="@+id/numberOfPunchesTextView5"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingRight="10sp" >
        </TextView>
        
    </LinearLayout>

</LinearLayout>